--- a/src/app/pages/auth/contents/login/login.component.html
+++ b/src/app/pages/auth/contents/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-header-wrapper">
-  <h2>Login</h2>
+  <h2>Aadmin Management</h2>
   <p>Sign in to continue.</p>
 </div>
 <form [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()">
@@ -45,7 +45,7 @@
       Login
     </button>
   </div>
-  <div class="navigation-link">
+  <!-- <div class="navigation-link">
    <b>Don't have an account? <a [routerLink]="['/auth/register']">Create new account</a></b>
-  </div>
+  </div> -->
 </form>
