update iocn and spell

--- a/src/app/pages/auth/contents/login/login.component.html
+++ b/src/app/pages/auth/contents/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-header-wrapper">
-  <h2>Aadmin Management</h2>
+  <h2>Admin Management</h2>
   <p>Sign in to continue.</p>
 </div>
 <form [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()">
